--- a/WinAuth7/WinAuth/App.xaml
+++ b/WinAuth7/WinAuth/App.xaml
@@ -3,11 +3,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:local="clr-namespace:WinAuth">
 
     <!--应用程序资源-->
     <Application.Resources>
-        <local:LocalizedStrings xmlns:local="clr-namespace:WinAuth" x:Key="LocalizedStrings"/>
+        <local:LocalizedStrings x:Key="LocalizedStrings"/>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
