--- a/WinAuth7/WinAuth/NewAuthenticator.xaml
+++ b/WinAuth7/WinAuth/NewAuthenticator.xaml
@@ -1,8 +1,10 @@
-﻿<phone:PhoneApplicationPage xmlns:Controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" 
+﻿<phone:PhoneApplicationPage 
+    xmlns:Controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" 
     x:Class="WinAuth.NewAuthenticator"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
+    xmlns:phonectl="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -23,9 +25,9 @@
     <!--LayoutRoot 是包含所有页面内容的根网格-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <!--枢轴控件-->
-        <phone:Pivot Title="战网安全令" SelectionChanged="Pivot_SelectionChanged_1" >
+        <phonectl:Pivot Title="战网安全令" SelectionChanged="Pivot_SelectionChanged_1" >
             <!--枢轴项一-->
-            <phone:PivotItem Header="注册">
+            <phonectl:PivotItem Header="注册">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition  Height="auto"/>
@@ -51,10 +53,10 @@
                                            Text="{Binding Description,Mode=TwoWay}" />
                     <ProgressBar Grid.Row="3" IsIndeterminate="{Binding IsEnrolling}"/>
                 </Grid>
-            </phone:PivotItem>
+            </phonectl:PivotItem>
 
             <!--枢轴项二-->
-            <phone:PivotItem Header="还原">
+            <phonectl:PivotItem Header="还原">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
@@ -80,8 +82,8 @@
                     </StackPanel>
 
                 </Grid>
-            </phone:PivotItem>
-        </phone:Pivot>
+            </phonectl:PivotItem>
+        </phonectl:Pivot>
     </Grid>
     
 </phone:PhoneApplicationPage>
